<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_find_in_page"
        android:icon="@drawable/ic_search_24"
        android:title="@string/text_find_in_page"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_refresh"
        android:title="@string/text_refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_toggle_source"
        android:title="@string/text_view_source"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_export_pdf"
        android:title="@string/text_export_pdf"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_fullscreen_mode"
        android:checkable="true"
        android:title="@string/text_fullscreen_mode"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_html_previewer_settings"
        android:title="@string/text_settings"
        app:showAsAction="never" />

    <item android:id="@+id/action_release_history" android:title="@string/release_history" app:showAsAction="never" />
</menu>
